--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@pixiv/three-vrm": "^3.3.4",
     "@pixiv/three-vrm-animation": "^3.3.4",
+    "gsap": "^3.12.7",
     "three": "^0.173.0"
   }
 }
